--- a/frontend/src/app/home/header/header.component.html
+++ b/frontend/src/app/home/header/header.component.html
@@ -1,17 +1,18 @@
 <mat-toolbar class="bgHeader">
-    <ul>
-      <a routerLink="listTask">List Task</a>
-    </ul>
-    <ul>
-      <a routerLink="saveTask">Create Task</a>
-    </ul>
-    <ul>
-      <a routerLink="listUser">Admin</a>
-    </ul>
-    <span class="headerSpacer"></span>
-    <ul>
-      <a mat-button routerLink="signUp">Sign Up</a>
-      <a mat-button routerLink="login">Login</a>
-      <a mat-button>Logout</a>
-    </ul>
-  </mat-toolbar>
+  <ul>
+    <a *ngIf= "_userService.loggedIn()" routerLink="listTask">List Task</a>
+  </ul>
+  <ul>
+    <a *ngIf= "_userService.loggedIn()" routerLink="saveTask">Create Task</a>
+  </ul>
+  <ul>
+    <a *ngIf= "_userService.loggedIn()" routerLink="listUser">Admin</a>
+  </ul>
+  <span class="headerSpacer"></span>
+  <ul>
+    <a *ngIf= "!_userService.loggedIn()" mat-button routerLink="signUp">Sign Up</a>
+    <a *ngIf= "!_userService.loggedIn()" mat-button routerLink="login">Login</a>
+    <a *ngIf= "_userService.loggedIn()" (click) = "_userService.logout()" mat-button>Logout</a>
+  </ul>
+</mat-toolbar>
+
