Code about save task with images

--- a/frontend/src/app/board/save-task/save-task.component.html
+++ b/frontend/src/app/board/save-task/save-task.component.html
@@ -1,38 +1,38 @@
 <div class="bgcomponent">
-    <div class="form">
-      <mat-card class="card">
-        <mat-card-title>Create Task</mat-card-title>
-        <mat-card-content>
-          <div class="container">
-            <mat-form-field>
-              <input
-                [(ngModel)]="registerData.name"
-                matInput
-                placeholder="Task name"
-                required
-              />
-            </mat-form-field>
-            <mat-form-field>
-              <input
-                [(ngModel)]="registerData.description"
-                matInput
-                placeholder="description"
-                required
-              />
-            </mat-form-field>
-            
-          </div>
-        </mat-card-content>
-        <mat-card-actions>
-          <button
-            (click)="saveTask()"
-            class="button colorButton"
-            mat-raised-button
-          >
-            Create
-          </button>
-        </mat-card-actions>
-      </mat-card>
-    </div>
+  <div class="form">
+    <mat-card class="card">
+      <mat-card-title>Create Task</mat-card-title>
+      <mat-card-content>
+        <div class="container">
+          <mat-form-field>
+            <input
+              [(ngModel)]="registerData.name"
+              matInput
+              placeholder="Task name"
+              required
+            />
+          </mat-form-field>
+          <mat-form-field>
+            <input
+              [(ngModel)]="registerData.description"
+              matInput
+              placeholder="description"
+              required
+            />
+          </mat-form-field>
+
+          <input type="file" (change)="uploadImg($event)" />
+        </div>
+      </mat-card-content>
+      <mat-card-actions>
+        <button
+          (click)="saveTaskImg()"
+          class="button colorButton"
+          mat-raised-button
+        >
+          Create
+        </button>
+      </mat-card-actions>
+    </mat-card>
   </div>
-  
+</div>
