--- a/frontend/src/app/board/list-task/list-task.component.html
+++ b/frontend/src/app/board/list-task/list-task.component.html
@@ -33,6 +33,9 @@
           <mat-panel-description>
             {{ task.description }}
           </mat-panel-description>
+          <mat-panel-description>
+            <img class="card-img-top image_center" src="{{ task.imageUrl }}" />
+          </mat-panel-description>
           <mat-action-row>
             <button
               class="btnSelectTodo"
